--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -157,7 +157,7 @@
           使用类别组合方法对聚类分割的结果处理，得到高分影像最终得分割结果。
 \end{enumerate}
 
-\begin{figure}[!htb]
+\begin{figure}[htb]
     \centering
     \includegraphics[width=1.0\textwidth]{framework}
     \caption{面向对象的改进型区间二型模糊遥感影像聚类算法框架图}
@@ -293,7 +293,7 @@ $\tilde{X_i}$ 和$\tilde{V_{i}}$ 的区间值距离$d_{I} (\tilde{X_i}, \tilde{V
     \end{split}
 \end{equation}
 
-\begin{figure}[H]
+\begin{figure}[htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{tfsvit2}
     \caption{TFSV-IT2FCM 算法流程图}
@@ -342,9 +342,246 @@ $\tilde{X_i}$ 和$\tilde{V_{i}}$ 的区间值距离$d_{I} (\tilde{X_i}, \tilde{V
 
 经过像元分割与非监督模糊聚类，可以得到遥感影像的初始分类结果。使用CORINE 地物覆被处理系统\footnote{CORINE (Coordination of Information on the Environment) 是欧洲委员会于1985年提出的环境信息协调系统，其包含44个类别的地物覆被，常用于地物覆被的后处理。官方网址：\url{https://land.copernicus.eu/pan-european/corine-land-cover}.} 对初始聚类结果进行人工类别合并，实现基于高分影像识别的高级地物覆被分类\cite{zhang2011progress}。
 
+\begin{table}[htbp]
+    \caption{ 实验区土地覆被类别表}\label{tab:1}
+    \centering
+    \footnotesize
+    \begin{tabular}{p{2cm}p{2cm}p{6cm}}
+        \toprule
+        研究区     & 地物类别 & 地物数据描述                 \\
+        \midrule
+        神湾地区   & 林地     & 自然森林和植被等             \\
+                   & 水域     & 河流                         \\
+                   & 草地     & 草场，长草的田地             \\
+                   & 建筑     & 建筑物，居民区等             \\
+                   & 养殖水域 & 水库，池塘等                 \\
+                   &          &                              \\
+        横琴地区   & 水域     & 河流，池塘，水库等           \\
+                   & 农业区   & 蔬菜种植区，农田等.          \\
+                   & 林地     & 自然森林和植被等             \\
+                   & 农场     & 果园，农场等                 \\
+                   & 建筑     & 建筑物，居民区，村庄等       \\
+                   &          &                              \\
+        三门峡地区 & 道路     & 公路，小径，柏油路，桥梁等。 \\
+                   & 林地     & 天然林，人工林等             \\
+                   & 水域     & 河流，池塘等.                \\
+                   & 草地     & 杂草，长满草的农田等。       \\
+                   & 农场     & 果园，农场等                 \\
+                   & 建筑     & 建筑物，居民区等             \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
 \section{实验结果}
 \label{sec::chap03-4}
-本章新提出的面向
+本章提出的面向对象的TFSV-IT2FCM 遥感影像聚类分割方法是对文献\cite{he2016remote} 中引进的面向对象的区间值模糊C-均值(Interval valued fuzzy c-means, IV-FCM) 聚类方法的改进。%\cite{he2016remote} 文中表明，面向对象的IV-FCM 方法相比其他已有模糊聚类方法，包含基于像素的方法(如FCM，IT2FCM)在遥感影像中可以获得更好的分割效果。
+因此，文中选择三个具有复杂土地覆盖的研究区，设计土地覆被分类实验来验证新提出的TFSV-IT2FCM 算法相比已有方法的性能效果，重点与IV-FCM 算法比较。同时，分别通过可视化的聚类分割结果与量化数据来验证分类结果。
+三个实验研究区分别为中山市神湾地区、珠海市横琴岛和河南省三门峡地区。三个研究区详细地物覆被介绍如表格\ref{tab:1}所示。
+
+
+\subsection{神湾地区实验}
+\label{subsec::chap03-4-1}
+神湾研究区位于广东省中山市境内，是一个复杂的种植区域，该区域的高分影像由SPOT 5 遥感卫星于2008 年拍摄。SPOT 5遥感卫星影像包含四个波段，空间分辨率大约$10$ 米，光谱范围$0.4-0.9$ 微米。 神湾地区地物覆被可划分为5大类，分别是：水域、草地、建筑和养殖水域。实验中选择影像$B1$、$B2$、$B3$ 波段合成RGB 图像，如图\ref{fig:shenwan}(a) 所示，其包含$400 \times 400$ 个像素。
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/shenwan}
+    \caption{神湾研究区不同方法分类结果示意图 }\label{fig:shenwan}
+\end{figure}
+
+在该研究区，文中提出的面向对象的TFSV-IT2FCM 算法分别与其他聚类分割算法进行比较，包含基于像素的聚类方法 (FCM 算法，IT2FCM 算法)和面向对象的聚类方法 (面向对象的IT2FCM， 面向对象的IV-FCM 算法)，聚类结果分别由图\ref{fig:shenwan}(f)-(i) 展示。另外，文中提出的TFSV-IT2FCM 算法包含三个主要处理步骤：影像分割，聚类和后处理。图\ref{fig:shenwan}(c) 和\ref{fig:shenwan}(d) 分别展示是否使用后处理的分割结果；图\ref{fig:shenwan}(e) 是获取影像分割单元时使用分水岭分割算法替换SLIC 超像素分割算法得到。通过目视各方法对研究区的聚类分割结果，可以得到以下结论：
+
+\begin{enumerate}[(1)]
+    \item 图\ref{fig:shenwan}(c) 和\ref{fig:shenwan}(d) 无论是否使用后处理操作，两者均有大致相似的分割类别区域，图\ref{fig:shenwan}(d) 使用后处理操作具有较少的奇异点。
+    \item 图\ref{fig:shenwan}(e) 中使用分水岭算法获取分割单元，与图\ref{fig:shenwan}(d) 相比，一些建筑类别的分割单元被错误划分为草地。因此，获取影像分割单元的分割算法在一定程度上会影像最后聚类分割的精度。
+    \item 比较图\ref{fig:shenwan}(f)-(i) 和图\ref{fig:shenwan}(d) 中的聚类计结果可知，这些聚类方法在水域的识别上都有不错的效果。然而，对于IV-FCM 算法(图\ref{fig:shenwan}(f))，一些草地类别被错分为林地类别；对于面向对象的IT2FCM 算法(图\ref{fig:shenwan}(g))，由于建筑、草地和林地这三类有相近的光谱波段，图中左下角区域无法明确区分三者；另外，与面向对象的方法相比，基于像素的IT2FCM 算法和FCM 算法(分别为图\ref{fig:shenwan}(g) 和(h)) 在同类别大区域中产生许多异类别的异常小块。
+\end{enumerate}
+综上所述，神湾研究区可视化的分类结果图表明文中提出的TFSV-IT2FCM 聚类分割算法相比其他已有算法能获得更好的遥感影像分割结果。
+
+\begin{table}[htb]
+    \caption{神湾地区影像地物类别抽样Ground truth表(pixels)}\label{tab:shenwan_data}
+    \centering
+    \footnotesize
+    \begin{tabular}{ccccc}
+        \toprule
+        林地  & 水域  & 草地  & 建筑  & 养殖水域 \\
+        \midrule
+        10124 & 46250 & 15687 & 23697 & 6942     \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+为了得到实验中精确量化的聚类结果图，实验中使用CORINE 土地覆被分类系统生成地物类别ground truth 图，如图\ref{fig:shenwan}(b) 所示。表~\ref{tab:shenwan_data} 为神湾研究区各类别地物抽样点数据表。为了对分类结果进行评价，确定分类的精度和可靠性。本实验中使用以下评价指标度量分类效果：
+\begin{enumerate}
+    \item \textbf{生产者精度(Producer's accuracy, PA)}
+
+          生产者精度是指分类器将整个影像像元正确分为A类的像元数（对角线值）与A类真实像元参考总数的比值。
+    \item \textbf{用户精度(User's accuracy, UA)}
+
+          用户精度是指正确分到A类的像元总数（对角线值）与分类器将整个影像的像元分为A类的像元总数（混淆矩阵中A类行的总和）比率。
+    \item \textbf{总体分类精度(Overall accuracy, OA)}
+
+          总体分类精度是指所有类别中正确分类的像元总和除以总像元数。
+    \item \textbf{Kappa 系数}
+
+          Kappa 系数基于混淆矩阵，用于衡量分类精度。计算公式为
+          \begin{equation}\label{eq:kappa}
+              \begin{split}
+                  Kappa = \frac{\mbox{总体准确度}-\mbox{期望准确度}}{1-\mbox{期望准确度}} = \frac{N\sum_{i=1}^n(X_{ii}) - \sum_{i=1}^n(X_{i+} \times X_{+i})}{N^2 - \sum_{i=1}^n(X_{i+} \times X_{+i})}
+              \end{split}
+          \end{equation}
+\end{enumerate}
+式中，$n$ 表示类别，$N$ 表示总类别数，$X_{ii}$ 表示混淆矩阵对角线元素，$X_{+i}$ 表示类别的行总和，$X_{i+}$ 表示类别的列总和。
+
+\begin{table*}[htbp]
+    \centering
+    \caption{ 神湾研究区不同方法分类精度表}
+    \label{tab:shenwan_result}
+    \resizebox{\textwidth}{!}{
+        \begin{threeparttable}[b]
+            \begin{tabular}{cccccccc}
+                \toprule
+                地物类别                   & TFSV-IT2FCM\tnote{1} & TFSV-IT2FCM\tnote & TFSV-IT2FCM\tnote{2} & IV-FCM & IT2FCM\tnote{2} & IT2FCM\tnote{4} & FCM    \\\cline{1-8}
+                \multicolumn{8}{c}{生产者精度 (\%)}                                                                                                                \\
+                \midrule
+                林地                       & 89.39                & 89.44             & 89.44                & 89.52  & 79.70           & 89.32           & 79.70  \\
+                水域                       & 94.08                & 94.58             & 94.18                & 93.59  & 94.06           & 94.09           & 94.21  \\
+                草地                       & 83.69                & 84.23             & 84.78                & 79.74  & 81.28           & 77.91           & 80.43  \\
+                建筑                       & 87.88                & 88.45             & 88.14                & 88.21  & 87.73           & 83.58           & 81.00  \\
+                养殖水域                   & 80.32                & 81.29             & 76.01                & 64.08  & 50.83           & 48.33           & 45.73  \\\cline{1-8}
+                \multicolumn{8}{c}{用户精度 (\%)}                                                                                                                  \\\cline{1-8}
+                林地                       & 82.98                & 83.39             & 83.39                & 84.10  & 77.46           & 82.40           & 77.46  \\
+                水域                       & 95.54                & 97.34             & 97.34                & 97.34  & 95.18           & 92.58           & 90.85  \\
+                草地                       & 82.96                & 82.96             & 82.96                & 80.69  & 70.21           & 72.32           & 63.84  \\
+                建筑                       & 91.95                & 90.68             & 87.97                & 86.04  & 84.60           & 86.04           & 86.46  \\
+                养殖水域                   & 69.27                & 69.27             & 70.71                & 56.31  & 70.71           & 61.93           & 69.27  \\
+                \cline{1-8}
+                \textbf{总体分类精度 (\%)} & 89.78                & 90.33             & 89.81                & 88.11  & 85.52           & 84.90           & 82.93  \\
+                \textbf{Kappa 系数}        & 0.8544               & 0.8621            & 0.8546               & 0.8302 & 0.7954          & 0.7871          & 0.7605 \\
+                \bottomrule
+            \end{tabular}
+            \begin{tablenotes}
+                \item[1] {TFSV-IT2FCM 算法，没有做后处理}
+                \item[2]{该方法中影像分割阶段使用Watershed 方法获取影像分割单元}
+                \item[3]{面向对象的IT2FCM 方法}
+                \item[4]{基于像素的IT2FCM 方法}
+            \end{tablenotes}
+
+        \end{threeparttable}
+    }
+\end{table*}
+
+表~\ref{tab:shenwan_result} 为各方法在神湾地区影像上的地物类别识别精度。文中提出的TFSV-IT2FCM 算法获得最好的OA 精度，为$90.33\%$，相比无后处理的TFSV-IT2FCM 算法、基于Watershed 分割的TFSV-IT2FCM 算法、 IV-FCM 算法、面向对象的IT2FCM 算法、基于像素的IT2FCM 算法和FCM 算法分别提升了$0.55\%$、$0.52\%$、$2.22\%$、$4.81\%$、$5.43\%$的分类精度。
+分类精度也表明对于文中提出的聚类分割算法，聚类是最重要的一步，在方法的三个部分（分割、聚类、后处理）中最大化的决定最终分类结果精度。Kappa系数结果也表明，文中提出的TFSV-IT2FCM 算法有效题目了影像地物的特征，获得了最佳的聚类分割结果。表中数值量化的结果基本与前文可视化的结果一致。
+
+
+\subsection{横琴地区实验}
+\label{subsec::chap03-4-1}
+第二个研究区横琴岛位于广东省珠海市，岛内具有复杂的农业与养殖区，该区域高分影像
+由SPOT 5 遥感卫星于2010 年拍摄。横琴地区地物类别可分为水域、农业区、林地、农田和建筑这五大类。实验区选择影像图像如图~\ref{fig:hengqin}(a) 所示，大小为$1203 \times 1055$ 个像素。
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/hengqin}
+    \caption{神湾研究区TFSV-IT2FCM 与IV-FCM 算法聚类分割图 }\label{fig:hengqin}
+\end{figure}
+
+在神湾研究区我们比较了文中提出的TFSV-IT2FCM 算法与其他算法的聚类分割结果，初步验证了TFSV-IT2FCM 算法的改进效果。文献\cite{he2016remote} 中证明了IV-FCM 算法相比其他聚类分割算法可以取得更好的实验精度，因此，在横琴地区和三门峡地区的实验中，我们着重比较提出的TFSV-IT2FCM 算法与IV-FCM 算法的实验效果。
+
+IV-FCM 算法和TFSV-IT2FCM 算法的可视化结果分别如图~\ref{fig:hengqin}(c) 和(d) 所示。结合目视解译可知，两种方法对具有明显边界的地物类别都有良好的划分，基本实现同一类地物划分的一致性。 参照图~\ref{fig:hengqin}(b) 中的真实地物分类，对比~\ref{fig:hengqin}(c) 和(d)中可视化结果，可以看出TFSV-IT2FCM算法对于一定范围内不同光谱特征的同一类别具有较大的容忍性。例如，图~\ref{fig:hengqin}(a1) 左上角水域的光谱特征是不均匀的，图~\ref{fig:hengqin}(b1) 和(c1) 结果表明TFSV-IT2FCM 算法将该区域正确划分为水域，由于水域的几个光谱与农业区相近，而IV-FCM 算法则将其错分为农业区。类似地，对于图~\ref{fig:hengqin}(a2)中地物覆被复杂的区域，TFSV-IT2FCM 算法能正确地将水与农田、建筑物等其他地物区分开来，而IV-FCM 算法则存在一定的分类错误。例如，在图~\ref{fig:hengqin}(b2)中，河流中的水被错误地划分为农业区; 然而，在图~\ref{fig:hengqin}(c2)中，TFSV-IT2FCM算法的结果清晰地识别出了河流两岸的水和其他物体。
+
+\begin{table*}[htbp]
+    \centering
+    \caption{ 横琴地区分类结果表}
+    \label{tab:hengqin_result}
+    \begin{adjustbox}{max width=1.05\textwidth}
+        \begin{tabular} {llllllllllllll}
+            \toprule
+            \multicolumn{1}{l}{\multirow{3}*{{分类结果}}} & \multicolumn{6}{c}{\textbf{TFSV-IT2FCM}} & \multicolumn{6}{c}{\textbf{IV-FCM}}                                                                                                                                                                  \\ \cline{2-13}
+                                                          & \multicolumn{5}{l}{采样点}               & \multicolumn{1}{c}{\multirow{2}*{{用户精度(\%)}}} & \multicolumn{5}{l}{采样点} & \multicolumn{1}{c}{\multirow{2}*{{用户精度(\%)}}}                                                                   \\\cline{2-6}  \cline{8-12}\\
+                                                          & 水域                                     & 农业区                                            & 林地                       & 农场                                              & 建筑  &       & 水域   & 农业区 & 林地  & 农场  & 建筑  &       \\
+            \midrule
+            水域                                          & 241231                                   & 10022                                             & 44                         & 0                                                 & 0     & 95.99 & 196301 & 54380  & 557   & 59    & 0     & 78.12 \\
+            农业区                                        & 21025                                    & 70848                                             & 4755                       & 57                                                & 1     & 73.28 & 9810   & 78463  & 8338  & 74    & 1     & 81.15 \\
+            林地                                          & 1108                                     & 11672                                             & 66320                      & 2167                                              & 18    & 81.59 & 167    & 8971   & 71578 & 569   & 0     & 88.06 \\
+            农场                                           & 0                                        & 43                                                & 4032                       & 28234                                             & 724   & 85.47 & 0      & 7      & 10192 & 22785 & 49    & 68.98 \\
+            建筑                                          & 0                                        & 0                                                 & 0                          & 1132                                              & 36236 & 96.97 & 0      & 0      & 0     & 4310  & 33058 & 88.47 \\
+            合计                                          & 263364                                   & 92585                                             & 75151                      & 31590                                             & 36979 &       & 206278 & 141821 & 90665 & 27797 & 33108 &       \\
+            生产者精度(\%)                                & 91.60                                    & 76.52                                             & 88.25                      & 89.38                                             & 97.99 &       & 95.16  & 55.33  & 78.95 & 81.97 & 99.85 &       \\
+            \bottomrule
+        \end{tabular}
+    \end{adjustbox}
+\end{table*}
+
+同样，为了获取横琴地区精确的分类结果，文中使用CORINE 土地分类系统随机采样$499,669$ 个像素点作为ground truth 图，如表~\ref{tab:hengqin_result} 所示，TFSV-IT2FCM 方法中$10,022$ 个像素由“农业区” 被错分为“水域”，而在IV-FCM 方法中被错分的像素点为$54,380$ 个。TFSV-IT2FCM 方法相比IV-FCM 方法，“水域”类别的用户精度从$78.12\%$ 提升到$95.99\%$。 表~\ref{tab:hengqin_result} 中的用户精度和生产者精度也表明TFSV-IT2FCM 聚类方法的性能要比IV-FCM 方法更好。
+
+\begin{table}[htbp]
+    \caption{横琴地区分类精度表}\label{tab:hengqin_oa}
+    \centering
+    \footnotesize
+    \begin{tabular}{llll}
+        \toprule
+        研究区 & 方法        & OA(\%) & Kappa 系数 \\
+        \midrule
+        横琴   & TFSV-IT2FCM & 88.63  & 0.8290     \\
+               & IV-FCM      & 80.49  & 0.7210     \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+表~\ref{tab:hengqin_oa} 中比较了TFSV-IT2FCM 方法和IV-FCM 方法在横琴地区的总体分类精度和Kappa 系数，TFSV-IT2FCM 方法的OA 从$80.49\%$ 提升到$88.63\%$， 同时Kappa 系数由$0.7210$ 提升到$0.8290$。
+
+
+\subsection{三门峡地区实验}
+\label{subsec::chap03-4-1}
+神湾地区与横琴地区遥感影像均由SPOT 5 遥感卫星拍摄，为了验证不同卫星影像的聚类分割结果，文中选取高分二号遥感卫星拍摄三门峡地区的遥感影像，影像空间分辨率为$1$ 米。三门峡研究区位于河南省三门峡市，具有复杂的城市地形。实验中选择影像$1$、$2$、$3$ 三个波段合成RGB 图像，如图\ref{fig:sanmenxia}(a) 所示，其包含$1625 \times 2320$ 个像素。
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=1.0\textwidth]{figures/sanmenxia}
+    \caption{三门峡研究区不同方法分类结果示意图 }\label{fig:sanmenxia}
+\end{figure}
+
+
+Similarly, the accuracy assessment obtained by TFSV-IT2FCM in Sanmenxia area showed { an overall classification accuracy of $90.42\%$  with the Kappa coefficient $0.8827$,} an increased nearly $7\%$ over the IV-FCM results.
+
+\begin{table*}[htbp]
+    \centering
+    \caption{三门峡地区分类结果表}
+    \label{tab:sanmenxia_result}
+    \begin{adjustbox}{max width=1.05\textwidth}
+        \begin{tabular} {llllllllllllllll}
+            \toprule
+            \multicolumn{1}{l}{\multirow{3}*{{分类结果}}} & \multicolumn{7}{c}{\textbf{TFSV-IT2FCM}} & \multicolumn{7}{c}{\textbf{IV-FCM}}                                                                                                                                                                                       \\ \cline{2-15}
+                                                          & \multicolumn{6}{l}{采样点}               & \multicolumn{1}{c}{\multirow{2}*{{用户精度(\%)}}} & \multicolumn{6}{l}{采样点} & \multicolumn{1}{c}{\multirow{2}*{{用户精度(\%)}}}                                                                                        \\\cline{2-7}  \cline{9-14}\\
+                                                          & 道路                                     & 林地                                              & 水域                       & 草地                                              & 农田   & 建筑   &       & 道路  & 林地   & 水域   & 草地   & 农田   & 建筑   &       \\
+            \midrule
+            道路                                          & 72564                                    & 4598                                              & 0                          & 2965                                              & 368    & 3770   & 86.11 & 62754 & 12385  & 341    & 3169   & 513    & 5103   & 74.47 \\
+            林地                                          & 591                                      & 197835                                            & 6542                       & 39638                                             & 456    & 376    & 80.60 & 891   & 176238 & 25324  & 31528  & 301    & 11156  & 71.80 \\
+            水域                                          & 0                                        & 0                                                 & 310128                     & 1360                                              & 2436   & 2625   & 97.97 & 0     & 358    & 310524 & 1257   & 2613   & 1797   & 98.10 \\
+            草地                                          & 3421                                     & 16329                                             & 865                        & 249431                                            & 405    & 0      & 92.23 & 2598  & 25341  & 516    & 231265 & 5639   & 5092   & 85.51 \\
+            农田                                          & 0                                        & 673                                               & 1539                       & 16234                                             & 291035 & 2391   & 93.32 & 0     & 408    & 2538   & 14840  & 289024 & 5062   & 92.67 \\
+            建筑                                          & 8589                                     & 23768                                             & 356                        & 3568                                              & 4997   & 283703 & 87.30 & 6589  & 85961  & 0      & 2167   & 3219   & 227045 & 69.86 \\
+            合计                                          & 85165                                    & 243203                                            & 319430                     & 313196                                            & 299697 & 292865 &       & 72832 & 300691 & 339243 & 284226 & 301309 & 255255 &       \\
+            生产者精度(\%)                                & 85.20                                    & 81.35                                             & 97.09                      & 79.64                                             & 97.11  & 0.97   &       & 86.16 & 58.61  & 91.53  & 81.37  & 95.92  & 88.95  &       \\
+            \bottomrule
+        \end{tabular}
+    \end{adjustbox}
+\end{table*}
+
+\begin{table}[htbp]
+    \caption{三门峡地区分类精度表}\label{tab:4}
+    \centering
+    \footnotesize
+    \begin{tabular}{llll}
+        \toprule
+        研究区 & 方法        & OA(\%) & Kappa 系数 \\
+        \midrule
+        三门峡 & TFSV-IT2FCM & 90.42  & 0.8827     \\
+               & IV-FCM      & 83.48  & 0.7978     \\
+        \bottomrule
+    \end{tabular}
+\end{table}
 
 \section{本章小结}
 \label{sec::chap03-5}
