--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,9 @@
 \usepackage{bnutils}
 \usepackage{amsmath,bm}
 \usepackage{mathtools}
+\usepackage{threeparttable}
+\usepackage{graphicx}
+\usepackage{adjustbox}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 % 你可以在这里修改配置文件中的定义，导言区可以使用中文。
 % \def\myname{薛瑞尼}
