论文框架目录

--- a/data/chap02.tex
+++ b/data/chap02.tex
@@ -4,10 +4,10 @@
 %%% TeX-master: t
 %%% End:
 
-\chapter{研究区与数据集介绍}
+\chapter{遥感影像分割基础}
 \label{cha:chap02}
 
-\section{数据集}
+\section{基于无监督聚类的遥感影像分割基础}
 \label{sec:other}
 
 
@@ -16,7 +16,7 @@
 GUI 作图工具，如 XFig(jFig), WinFig, Tpx, Ipe, Dia, Inkscape, LaTeXPiX,
 jPicEdt, jaxdraw 等等。
 
-\subsection{插图}
+\subsection{图一}
 \label{sec:graphs}
 
 强烈推荐《\LaTeXe 插图指南》！关于子图形的使用细节请参看 \textsf{subfig} 的说明文档。
@@ -34,5 +34,9 @@ jPicEdt, jaxdraw 等等。
 %  \label{fig:xfig1}
 %\end{figure}
 
+\section{基于神经网络的遥感影像分割方法}
+\label{sec:chap02-2}
+
+一般图形都是处在浮动环境中。之所以称为浮动是指最终
 
 
