--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -4,7 +4,8 @@
 %%% TeX-master: t
 %%% End:
 
-\chapter{面向对象的遥感影像的区间二型模糊聚类分割算法}
+%面向对象的遥感影像的区间二型模糊聚类分割算法
+\chapter{基于区间二型模糊聚类的遥感影像无监督分割方法}
 \label{cha:chap03}
 
 \section{引言}
