--- a/data/chap04.tex
+++ b/data/chap04.tex
@@ -4,7 +4,7 @@
 %%% TeX-master: t
 %%% End:
 
-\chapter{方法二}
+\chapter{基于生成对抗网络的遥感影像分割方法}
 \label{cha:chap04}
 
 
@@ -16,11 +16,21 @@
   唐代古文运动领袖，与柳宗元合称韩柳。诗力求险怪新奇，雄浑重气势。}
 
 
-\section{封面相关}
+\section{引言}
 封面的例子请参看 cover.tex。主要符号表参看 denation.tex，附录和个人简历分别参看 appendix01.tex
 和 resume.tex。里面的命令都非常简单，一看即会。\footnote{你说还是看不懂？怎么会呢？}
 
-\section{字体命令}
+
+\section{影像分割实验数据}
+blabala
+
+\section{基于生成对抗网络框架的影像分割方法}
 \label{sec:first}
 
 苏轼（1037-1101），北宋文学家、书画家。字子瞻，号东坡居士，眉州眉山（今属四川）人
+
+\section{实验结果与分析}
+balabala
+
+\section{本章小结}
+balabala
