--- a/data/cover.tex
+++ b/data/cover.tex
@@ -5,7 +5,7 @@
 %%% End:
 %\secretlevel{绝密} \secretyear{10}
 
-\ctitle{基于模糊不确定性和生成对抗网络的遥感影像弱监督学习分类}
+\ctitle{基于模糊不确定性和生成对抗网络的遥感影像弱监督识别分类}
 %\makeatletter
 %\cdegree{硕士}
 
@@ -13,7 +13,7 @@
 
 \cauthor{江涛}
 \csupervisor{余先川教授} %\\ \hspace*{6em}}
-\cdepartment{信息科学与技术学院 2016级}
+\cdepartment{信息科学与技术学院}
 \cmajor{计算机软件与理论}
 \cnum{201621210026}
 \cdate{\the\year 年 \the\month 月}
