--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,6 @@
 % 你可以在这里修改配置文件中的定义，导言区可以使用中文。
 % \def\myname{薛瑞尼}
 
-
 \begin{document}
 % 定义所有的eps文件在figures子目录下
 \graphicspath{{figures/}}
@@ -44,7 +43,7 @@
 \include{data/chap02}
 \include{data/chap03}
 \include{data/chap04}
-\include{data/chap05}
+%\include{data/chap05}
 \include{data/chap06}
 
 
