--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -373,7 +373,7 @@ $\tilde{X_i}$ 和$\tilde{V_{i}}$ 的区间值距离$d_{I} (\tilde{X_i}, \tilde{V
     \end{tabular}
 \end{table}
 
-\section{实验结果}
+\section{实验结果与分析}
 \label{sec::chap03-4}
 本章提出的面向对象的TFSV-IT2FCM 遥感影像聚类分割方法是对文献\cite{he2016remote} 中引进的面向对象的区间值模糊C-均值(Interval valued fuzzy c-means, IV-FCM) 聚类方法的改进。%\cite{he2016remote} 文中表明，面向对象的IV-FCM 方法相比其他已有模糊聚类方法，包含基于像素的方法(如FCM，IT2FCM)在遥感影像中可以获得更好的分割效果。
 因此，文中选择三个具有复杂土地覆盖的研究区，设计土地覆被分类实验来验证新提出的TFSV-IT2FCM 算法相比已有方法的性能效果，重点与IV-FCM 算法比较。同时，分别通过可视化的聚类分割结果与量化数据来验证分类结果。
