--- a/data/chap04.tex
+++ b/data/chap04.tex
@@ -21,7 +21,7 @@
 和 resume.tex。里面的命令都非常简单，一看即会。\footnote{你说还是看不懂？怎么会呢？}
 
 
-\section{影像分割实验数据}
+\section{实验数据集介绍}
 blabala
 
 \section{基于生成对抗网络框架的影像分割方法}
