--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -59,11 +59,11 @@
 第 \textbf{3} 章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 邻域约束 聚类的地球化学异常提取 方法的原 理、算法流程，并将该应用在 理、算法流程，并将该应用在 高贝沟 、孤山岭 孤山岭 、长水 地区的球化学异常提取上，对 地区的球化学异常提取上，对 地区的球化学异常提取上，对
 基于邻域约束聚类及局部相关系数的地球化学异常提取。
 
-第 \textbf{4} 章：介绍 矿产资源 预测 的背景及地球化学找矿 的意义，调研了国内外地球化学异 义，调研了国内外地球化学异 常提取、元素组合 常提取、元素组合 异常提取 的现状，对 的现状，对 经典方法和 主流 方法做了 分析 和介绍， 归纳了一些 方法存在的不足 ，并 针对这些问题，提出了解决 方案， 引出本文 的主要研究内容。
+第 \textbf{4} 章：介绍。
 
-第 \textbf{5} 章： 详细介绍 了研究区 整体的概况， 包括地层、 侵入岩 等地质信息， 在研究区内 选取了 四块比较 典型的选区 作为 实验对象， 从地质背景和 地化特征 角度对 这些地区 进行介 绍，为后面 章节的实验部分提供依据。 此外，本章 此外，本章 还针对数据 特点详细介绍了数据预处理 的方法。
+第 \textbf{5} 章： 详细介绍 。
 
-第 \textbf{6} 章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 第三章：阐述了本文提出的算法基于空间 邻域约束 聚类的地球化学异常提取 方法的原 理、算法流程，并将该应用在 理、算法流程，并将该应用在 高贝沟 、孤山岭 孤山岭 、长水 地区的球化学异常提取上，对 地区的球化学异常提取上，对 地区的球化学异常提取上，对
+第 \textbf{6} 章：阐述了本文提出的
 基于邻域约束聚类及局部相关系数的地球化学异常提取。hh
 
 
