--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -660,3 +660,10 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   publisher={IEEE}
 }
 
+@inproceedings{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1097--1105},
+  year={2012}
+}
