--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -667,3 +667,11 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   pages={1097--1105},
   year={2012}
 }
+
+@inproceedings{long2015fully,
+  title={Fully convolutional networks for semantic segmentation},
+  author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3431--3440},
+  year={2015}
+}
