--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -675,3 +675,10 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   pages={3431--3440},
   year={2015}
 }
+
+@article{simonyan2014very,
+  title={Very deep convolutional networks for large-scale image recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
