--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -169,7 +169,7 @@
 \subsection{面向对象的TFSV 模型}
 \label{subsec::chap03-3-1}
 
-\subsubsection{影像分割}
+\subsubsection*{1.影像分割}
 \label{subsec::chap03-3-1-1}
 
 目前，遥感影像常用的像元分割算法包含基于分水岭的算法，基于直方图的方法和聚类方法等\cite{roerdink2000watershed}。简单线性迭代聚类（SLIC）算法具有高计算效率和可选数量的分段单元\cite{achanta2012slic}，因此本章使用SLIC 超像素分割算法提取遥感影像的分割单元。 SLIC 算法的关键步骤如下：
@@ -189,7 +189,7 @@
 其中$\bm{B_i}(1 \leq i \leq n)$ 表示第$i$ 个分割单元，$n$ 表示分割单元的总数。 $\bm{B_i}(i=1,2,\cdots, n)$ 是一个$j \times p$ 矩阵，其中$j$ 表示每个波段包含的像素数目，$p$ 表示图像通道数。
 
 
-\subsubsection{影像单元的TFSV 数据建模}
+\subsubsection*{2.影像单元的TFSV 数据建模}
 尽管文献\cite{he2016remote} 中已经证明：对于影像分割单元，区间值的特征比均值特征更有效，但是影像分割单元的不确定性不能被充分的表达。因此，文中使用定义 \ref{define1} 的TFSV 数据模型$\bm{\tilde{A_i}}$  来提取影像单元$\bm{B_i}$ 的特征：
 \begin{enumerate}[ 1)]
     \item 基于影像分割单元$\bm{B_i}$内像素的均值和方差特性，可以获得一个$p$ 维的区间值向量，记为$\bm{X_i}$，如下：
@@ -216,7 +216,7 @@
 \label{subsec::chap03-3-2}
 
 
-\subsubsection{区间二型模糊隶属度}
+\subsubsection*{1.区间二型模糊隶属度}
 \label{subsec::chap03-3-3-2-1}
 区间二型模糊聚类算法(Interval type 2 fuzzy clustering method, IT2FCM) 使用一个区间值来表示隶属度值。文献\cite{hwang2007uncertain} 中使用两个模糊化指数$m_1$ 和$m_2$ 得到区间二型隶属度函数(Interval type 2 membership function，IT2MF) 的上界和下界，从而将一型模糊集(Type 1 fuzzy sets, T1FS) 扩展为二型模糊集(Type 2 fuzzy sets, T2FS)。然而，IT2FCM 算法对模糊指数$m_1$ 和$m_2$ 的取值敏感。与传统FCM 算法相比，不恰当的$m_1$ 和$m_2$ 取值会导致更差的实验结果。因此，基于公式~\ref{eq:interval} 中新定义的区间值距离度量，类似FCM 算法，本文仅使用一个模糊指数$m$ 来表达IT2MF。
 
@@ -277,7 +277,7 @@ $\tilde{X_i}$ 和$\tilde{V_{i}}$ 的区间值距离$d_{I} (\tilde{X_i}, \tilde{V
 其中$d_{ji}^0$ 和$d_{ji}^1$ 分别是$\tilde{X_i}$ 和$\tilde{V_j}$ 的$0-cut$ 距离和$1-cut$ 距离度量，由区间值距离$d_{I} (\tilde{X_i}, \tilde{V_j})$ 计算得出。
 
 
-\subsubsection{TFSV-IT2FCM 算法}
+\subsubsection*{2.TFSV-IT2FCM 算法}
 \label{subsubsec::chap03-3-3-2-2}
 与FCM 算法不同，文中提出的TFSV-IT2FCM 算法核心是一个IT2FS，无法直接通过降型去模糊化，需要先计算IT2FS 的质心将IT2FS 转换为T1FS，再去模糊化得到明确集\cite{karnik2001centroid}。 文中使用EKM 降型算法\cite{wu2009enhanced} 降型和去模糊化，从而获取精确的聚类中心。降型后的聚类中心点可表示为
 
